--- a/index.html
+++ b/index.html
@@ -1,45 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weed Expertos</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Anek+Devanagari:wght@300&family=Silkscreen&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Anek+Devanagari:wght@300&family=Silkscreen&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
+
+    <!-- Header -->
+
     <header>
-        <section>
-            <div class="logo">
-                <h1>Weed Expertos</h1>
-            </div>
-            <div class="navegacion">
-                <nav>
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="quienessomos.html">¿Quienes somos?</a></li>
-                        <li><a href="weedpedia.html">Weedpedia</a></li>
-                        <li><a href="tutoriales.html">Tutoriales</a></li>
-                        <li><a href="contacto.html">Contacto</a></li>
+        <nav class="navbar navbar-expand-lg bg-success">
+            <div class="container-fluid">
+                <a class="navbar-brand text-light link-warning" href="index.html">Home</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active text-light link-warning" aria-current="page"
+                                href="quienessomos.html">¿Quienes somos?</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light link-warning" href="weedpedia.html">Weedpedia</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light link-warning" href="tutoriales.html">Tutoriales</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light link-warning" href="contacto.html">Contacto</a>
+                        </li>
                     </ul>
-                </nav>
+                </div>
             </div>
-        </section>
+        </nav>
     </header>
-    <div class="contenido">
-        <br>
-        <h2>Noticias</h2>
-        <br>
-        <p>Varios centros de investigacion del mundo buscan mejorar la genetica del cannabis.</p>
-        <br>
-        <div><iframe width="640" height="480" src="https://www.youtube.com/embed/h-I_smKQmgg" title="Objetivo: mejorar la genética del cannabis | DW Visión futuro" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    <!-- /Header -->
+
+    <!-- Carrousel -->
+
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="/assets/img/weed-1.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="/assets/img/weed-2.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="/assets/img/weed-3.jpg" class="d-block w-100" alt="...">
+            </div>
         </div>
     </div>
+
+    <!-- /Carrousel -->
+
+    <!-- Contenido -->
+
+    <!-- /Contenido -->
+
+    <!-- Footer -->
+
     <footer>
         <p>Cannabicultores anonimos.</p>
     </footer>
+
+    <!-- /Footer -->
+
+    <!-- Bootstrap -->
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
+
+    <!-- /Bootstrap -->
+
 </body>
+
 </html>
