--- a/index.html
+++ b/index.html
@@ -56,18 +56,36 @@
 
     <!-- Carrousel -->
 
-    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
+        </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="/assets/img/weed-1.jpg" class="d-block w-100" alt="...">
+                <img src="assets/img/weed-1.jpg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="/assets/img/weed-2.jpg" class="d-block w-100" alt="...">
+                <img src="assets/img/weed-2.jpg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="/assets/img/weed-3.jpg" class="d-block w-100" alt="...">
+                <img src="assets/img/weed-3.jpg" class="d-block w-100" alt="...">
             </div>
         </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
     </div>
 
     <!-- /Carrousel -->
@@ -76,13 +94,56 @@
 
     <!-- /Contenido -->
 
+
     <!-- Footer -->
+    <footer class="text-center text-white" style="background-color:#37AE88;">
+        <!-- Grid container -->
+        <div class="container p-4">
+            <!-- Section: Links  -->
+            <section class="">
+                <div class="container text-center text-md-start mt-5">
+                    <!-- Grid row -->
+                    <div class="row mt-3">
+                        <!-- Grid column -->
+                        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+                            <!-- Content -->
+                            <h6 class="text-uppercase fw-bold mb-4">
+                                <i class="fas fa-gem me-3 text-secondary"></i>Weed Expertos
+                            </h6>
+                            <p>
+                                Cannabicultores unidos al servicio de los nuevos.
+                            </p>
+                        </div>
+                        <!-- Grid column -->
 
-    <footer>
-        <p>Cannabicultores anonimos.</p>
+                        <!-- Grid column -->
+                        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                            <!-- Links -->
+                            <h6 class="text-uppercase fw-bold mb-4">Contacto</h6>
+                            <p><i class="fas fa-home me-3 text-secondary"></i> Mendoza, Argentina</p>
+                            <p>
+                                <i class="fas fa-envelope me-3 text-secondary"></i>
+                                Leandro_godoy95@hotmail.com
+                            </p>
+                            <p><i class="fas fa-phone me-3 text-secondary"></i> +542616816574
+                        </div>
+                        <!-- Grid column -->
+                    </div>
+                    <!-- Grid row -->
+                </div>
+            </section>
+            <!-- Section: Links  -->
+        </div>
+        <!-- Grid container -->
+
+        <!-- Copyright -->
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+            © 2022 Copyright:
+            <a class="text-white" href="https://getbootstrap.com/">Hecho con bootstrap :3</a>
+        </div>
+        <!-- Copyright -->
     </footer>
-
-    <!-- /Footer -->
+    <!-- Footer -->
 
     <!-- Bootstrap -->
 
