--- a/tutoriales.html
+++ b/tutoriales.html
@@ -52,12 +52,12 @@
 
     <!-- /Header -->
 
-    <div class="contenido">
+    <div class="contenido text-white text-center">
         <br>
         <h2>Tutoriales</h2>
         <br>
         <br>
-        <table id="tutoriales">
+        <table class="tutoriales">
             <tr>
                 <th><p>Cosecha</p></th>
                 <th><p>Cultivo indoor</p></th>
@@ -87,9 +87,56 @@
             </tr>
         </table>
     </div>
-    <footer>
-        <p>Cannabicultores anonimos.</p>
+
+    <!-- Footer -->
+    <footer class=" text-center text-white" style="background-color:#37AE88;">
+        <!-- Grid container -->
+        <div class="container p-4">
+            <!-- Section: Links  -->
+            <section class="">
+                <div class="container text-center text-md-start mt-5">
+                    <!-- Grid row -->
+                    <div class="row mt-3">
+                        <!-- Grid column -->
+                        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+                            <!-- Content -->
+                            <h6 class="text-uppercase fw-bold mb-4">
+                                <i class="fas fa-gem me-3 text-secondary"></i>Weed Expertos
+                            </h6>
+                            <p>
+                                Cannabicultores unidos al servicio de los nuevos.
+                            </p>
+                        </div>
+                        <!-- Grid column -->
+
+                        <!-- Grid column -->
+                        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                            <!-- Links -->
+                            <h6 class="text-uppercase fw-bold mb-4">Contacto</h6>
+                            <p><i class="fas fa-home me-3 text-secondary"></i> Mendoza, Argentina</p>
+                            <p>
+                                <i class="fas fa-envelope me-3 text-secondary"></i>
+                                Leandro_godoy95@hotmail.com
+                            </p>
+                            <p><i class="fas fa-phone me-3 text-secondary"></i> +542616816574
+                        </div>
+                        <!-- Grid column -->
+                    </div>
+                    <!-- Grid row -->
+                </div>
+            </section>
+            <!-- Section: Links  -->
+        </div>
+        <!-- Grid container -->
+
+        <!-- Copyright -->
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+            © 2022 Copyright:
+            <a class="text-white" href="https://getbootstrap.com/">Hecho con bootstrap :3</a>
+        </div>
+        <!-- Copyright -->
     </footer>
+    <!-- Footer -->
 
     <!-- Bootstrap -->
 
@@ -98,6 +145,6 @@
         crossorigin="anonymous"></script>
 
     <!-- /Bootstrap -->
-    
+
 </body>
 </html>
