--- a/weedpedia.html
+++ b/weedpedia.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Weedpedia</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-            integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-        <link rel="stylesheet" href="assets/css/style.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Anek+Devanagari:wght@300&family=Silkscreen&display=swap"
-            rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Anek+Devanagari:wght@300&family=Silkscreen&display=swap"
-            rel="stylesheet">
-    </head>
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Weedpedia</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anek+Devanagari:wght@300&family=Silkscreen&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anek+Devanagari:wght@300&family=Silkscreen&display=swap"
+        rel="stylesheet">
+</head>
 
 <body>
 
@@ -52,38 +53,92 @@
     </header>
 
     <!-- /Header -->
-
     <div class="contenido">
         <br>
-        <h2>Variedades</h2>
         <br>
-        <table>
-            <tr>
-                <th><h2>Nombre</h2></th>
-                <th><h2>Descripcion</h2></th>
-                <th><h2>THC/CBD</h2></th>
-            </tr>
+        <h2 class="text-center text-white bgcontent">Variedades</h2>
+        <table class="table justify-content-center align-items-center text-white">
 
-            <tr>
-                <td><h3>Sativa</h3></td>
-                <td><h3>Tendencia a ser una planta mas alta y con menos follage.</h3></td>
-                <td><h3>Mayor cantidad de THC</h3></td>
-            </tr>
-            <tr>
-                <td><h3>Indica</h3></td>
-                <td><h3>Similar a un arbusto, con mucho follage.</h3></td>
-                <td><h3>Mayor cantidad de CBD</h3></td>
-            </tr>
+            <thead>
+                <tr>
+                    <th scope="col">Nombre</th>
+                    <th scope="col">Descripcion</th>
+                    <th scope="col">THC/CBD</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Sativa</td>
+                    <td>Tendencia a ser una planta mas alta y con menos follage.</td>
+                    <td>Mayor cantidad de THC</td>
+                </tr>
+                <tr>
+                    <td>Indica</td>
+                    <td>Similar a un arbusto, con mucho follage.</td>
+                    <td>Mayor cantidad de CBD</td>
+                </tr>
+                <tr>
+                    <td>Hibrida</td>
+                    <td>El termino medio entre las dos, no es alta como la sativa ni un arbusto como la indica.</td>
+                    <td>Poseen cantidades variables de CBD y THC</td>
+                </tr>
+            </tbody>
         </table>
-    <div>
-        <h2>Ejemplo</h2>
-        <br>
-        <img src="https://www.dinafem.org/uploads/indica_1.jpg" width="450" height="450" border="3">
+        <div>
+            <h2 class="text-center bgcontent text-white">Ejemplos</h2>
+            <img src="https://www.dinafem.org/uploads/indica_1.jpg" class="mx-auto d-block" width="450" height="450" border="3">
+        </div>
+
     </div>
-    </div>
-    <footer>
-        <p>Cannabicultores anonimos.</p>
+    <!-- Footer -->
+    <footer class=" text-center text-white" style="background-color:#37AE88;">
+        <!-- Grid container -->
+        <div class="container p-4">
+            <!-- Section: Links  -->
+            <section class="">
+                <div class="container text-center text-md-start mt-5">
+                    <!-- Grid row -->
+                    <div class="row mt-3">
+                        <!-- Grid column -->
+                        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+                            <!-- Content -->
+                            <h6 class="text-uppercase fw-bold mb-4">
+                                <i class="fas fa-gem me-3 text-secondary"></i>Weed Expertos
+                            </h6>
+                            <p>
+                                Cannabicultores unidos al servicio de los nuevos.
+                            </p>
+                        </div>
+                        <!-- Grid column -->
+
+                        <!-- Grid column -->
+                        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                            <!-- Links -->
+                            <h6 class="text-uppercase fw-bold mb-4">Contacto</h6>
+                            <p><i class="fas fa-home me-3 text-secondary"></i> Mendoza, Argentina</p>
+                            <p>
+                                <i class="fas fa-envelope me-3 text-secondary"></i>
+                                Leandro_godoy95@hotmail.com
+                            </p>
+                            <p><i class="fas fa-phone me-3 text-secondary"></i> +542616816574
+                        </div>
+                        <!-- Grid column -->
+                    </div>
+                    <!-- Grid row -->
+                </div>
+            </section>
+            <!-- Section: Links  -->
+        </div>
+        <!-- Grid container -->
+
+        <!-- Copyright -->
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+            © 2022 Copyright:
+            <a class="text-white" href="https://getbootstrap.com/">Hecho con bootstrap :3</a>
+        </div>
+        <!-- Copyright -->
     </footer>
+    <!-- Footer -->
 
     <!-- Bootstrap -->
 
@@ -94,4 +149,5 @@
     <!-- /Bootstrap -->
 
 </body>
+
 </html>
