--- a/tutoriales.html
+++ b/tutoriales.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Tutoriales</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-            integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-        <link rel="stylesheet" href="assets/css/style.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Anek+Devanagari:wght@300&family=Silkscreen&display=swap"
-            rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Anek+Devanagari:wght@300&family=Silkscreen&display=swap"
-            rel="stylesheet">
-    </head>
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tutoriales</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anek+Devanagari:wght@300&family=Silkscreen&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anek+Devanagari:wght@300&family=Silkscreen&display=swap"
+        rel="stylesheet">
+</head>
+
 <body>
 
     <!-- Header -->
@@ -52,43 +54,82 @@
 
     <!-- /Header -->
 
+    <!-- Contenido -->
+
     <div class="contenido text-white text-center">
         <br>
-        <h2>Tutoriales</h2>
+        <h1>Tutoriales</h1>
         <br>
         <br>
-        <table class="tutoriales">
-            <tr>
-                <th><p>Cosecha</p></th>
-                <th><p>Cultivo indoor</p></th>
-                <th><p>Como producir aceite de canabis</p></th>
-                <th><p>Manteca canabica para tus comidas</p></th>
-            </tr>
-            <tr>
-                <td> </td>
-            </tr>
-            <tr>
-                <td><iframe width="360" height="240" src="https://www.youtube.com/embed/pxtVcYfkQ5g" title="Cannabis Medicinal: La Cosecha y Extraccion de Cannabinoides- TvAgro por Juan Gonzalo Angel Restrepo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-                <td><iframe width="360" height="240" src="https://www.youtube.com/embed/iSxwBdp96LA" title="Cultivo Marihuana Interior I Seguimiento 3 meses" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-                <td><iframe width="360" height="240" src="https://www.youtube.com/embed/tdfqTMz9qYA" title="Taller de preparación de Aceites de cannabis" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-                <td><iframe width="360" height="240" src="https://www.youtube.com/embed/K68qZuyYIbg" title="Cómo hacer Mantequilla Cannábica" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-            </tr>
-            <tr>
-                <th><p>"Cultivar canabis no es complicado"</p></th>
-                <th><p>Cultivo outdoor</p></th>
-                <th><p>Canabis medicinal legal en Argentina</p></th>
-                <th><p>Fabrica canabis en Buenos Aires</p></th>
-            </tr>
-            <tr>
-                <td><iframe width="360" height="240" src="https://www.youtube.com/embed/gdPvELTj5M8" title="“Sembrar cannabis no es complicado”" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-                <td><iframe width="360" height="240" src="https://www.youtube.com/embed/bOJ-wXs8-5k" title="Guía de Cultivo Marihuana en Exterior I Primeros pasos" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-                <td><iframe width="360" height="240" src="https://www.youtube.com/embed/xSH0nl8OkeM" title="El cannabis medicinal es ley" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-                <td><iframe width="360" height="240" src="https://www.youtube.com/embed/WAymbcNctUE" title="CANNABIS industria ARGENTINA - Telefe Noticias" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-            </tr>
-        </table>
+        <div class="container text-center">
+            <div class="row align-items-center">
+                <div class="col">
+                    <h2>"Cultivar canabis no es complicado"</h2>
+                    <iframe width="360" height="240" src="https://www.youtube.com/embed/gdPvELTj5M8"
+                        title="“Sembrar cannabis no es complicado”" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+                <div class="col">
+                    <h2>Cultivo outdoor</h2>
+                    <iframe width="360" height="240" src="https://www.youtube.com/embed/bOJ-wXs8-5k"
+                        title="Guía de Cultivo Marihuana en Exterior I Primeros pasos" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+                <div class="col">
+                    <h2>Canabis medicinal legal en Argentina</h2>
+                    <iframe width="360" height="240" src="https://www.youtube.com/embed/xSH0nl8OkeM"
+                        title="El cannabis medicinal es ley" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+                <div class="col">
+                    <h2>Fabrica canabis en Buenos Aires</h2>
+                    <iframe width="360" height="240" src="https://www.youtube.com/embed/WAymbcNctUE"
+                        title="CANNABIS industria ARGENTINA - Telefe Noticias" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+            <div class="row align-items-start">
+                <div class="col">
+                    <h2>Cosecha</h2>
+                    <iframe width="360" height="240" src="https://www.youtube.com/embed/pxtVcYfkQ5g"
+                        title="Cannabis Medicinal: La Cosecha y Extraccion de Cannabinoides- TvAgro por Juan Gonzalo Angel Restrepo"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+                <div class="col">
+                    <h2>Cultivo indoor</h2>
+                    <iframe width="360" height="240" src="https://www.youtube.com/embed/iSxwBdp96LA"
+                        title="Cultivo Marihuana Interior I Seguimiento 3 meses" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+                <div class="col">
+                    <h2>Como producir aceite de canabis</h2>
+                    <iframe width="360" height="240" src="https://www.youtube.com/embed/tdfqTMz9qYA"
+                        title="Taller de preparación de Aceites de cannabis" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+                <div class="col">
+                    <h2>Manteca canabica para tus comidas</h2>
+                    <iframe width="360" height="240" src="https://www.youtube.com/embed/K68qZuyYIbg"
+                        title="Cómo hacer Mantequilla Cannábica" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+        </div>
     </div>
 
+    <!-- /Contenido -->
+
     <!-- Footer -->
+
     <footer class=" text-center text-white" style="background-color:#37AE88;">
         <!-- Grid container -->
         <div class="container p-4">
@@ -147,4 +188,5 @@
     <!-- /Bootstrap -->
 
 </body>
+
 </html>
