cambios carrousel, navbar y footer

--- a/quienessomos.html
+++ b/quienessomos.html
@@ -23,7 +23,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbarbg">
             <div class="container-fluid">
-                <a class="navbar-brand text-light link-warning navbarbg" href="index.html">Weed Expertos</a>
+                <a class="navbar-brand text-light link-warning navbarbg logotipo" href="index.html">Weed Expertos</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -34,11 +34,18 @@
                             <a class="nav-link active text-light link-warning" aria-current="page"
                                 href="quienessomos.html">¿Quienes somos?</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light link-warning" href="weedpedia.html">Weedpedia</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle text-light" href="#" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                Weedpedia
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="tutoriales.html">Tutoriales</a></li>
+                                <li><a class="dropdown-item" href="weedpedia.html">Tabla de especies</a></li>
+                            </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light link-warning" href="tutoriales.html">Tutoriales</a>
+                            <a class="nav-link text-light link-warning" href="media.html">Media</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-light link-warning" href="contacto.html">Contacto</a>
@@ -79,10 +86,10 @@
                         <!-- Grid column -->
                         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
                             <!-- Content -->
-                            <h6 class="text-uppercase fw-bold mb-4">
+                            <h6 class="text-uppercase fw-bold mb-4 text-center">
                                 <i class="fas fa-gem me-3 text-secondary"></i>Weed Expertos
                             </h6>
-                            <p>
+                            <p class="text-center">
                                 Cannabicultores unidos al servicio de los nuevos.
                             </p>
                         </div>
@@ -91,13 +98,27 @@
                         <!-- Grid column -->
                         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
                             <!-- Links -->
-                            <h6 class="text-uppercase fw-bold mb-4">Contacto</h6>
+                            <h6 class="text-uppercase fw-bold mb-4 text-center">Contacto</h6>
                             <p><i class="fas fa-home me-3 text-secondary"></i> Mendoza, Argentina</p>
                             <p>
-                                <i class="fas fa-envelope me-3 text-secondary"></i>
+                                <i class="fas fa-envelope me-3 text-secondary text-center"></i>
                                 Leandro_godoy95@hotmail.com
                             </p>
-                            <p><i class="fas fa-phone me-3 text-secondary"></i> +542616816574
+                            <p><i class="fas fa-phone me-3 text-secondary text-center"></i> +542616816574
+                        </div>
+                        <!-- Grid column -->
+                        <!-- Grid column -->
+                        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                            <a href="https://en.wikipedia.org/wiki/Cat"><img src="assets/img/logo_whatsapp.png"
+                                    width="50px" height="50px"></a>
+                            <br>
+                            <br>
+                            <a href="https://en.wikipedia.org/wiki/Cat"><img src="assets/img/logo_instagram.png"
+                                    width="50px" height="50px"></a>
+                            <br>
+                            <br>
+                            <a href="https://en.wikipedia.org/wiki/Cat"><img src="assets/img/logo_twitter.png"
+                                    width="50px" height="50px"><a>
                         </div>
                         <!-- Grid column -->
                     </div>
