--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbarbg">
             <div class="container-fluid">
-                <a class="navbar-brand text-light link-warning navbarbg" href="index.html">Weed Expertos</a>
+                <a class="navbar-brand text-light link-warning navbarbg logotipo" href="index.html">Weed Expertos</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -33,11 +33,18 @@
                             <a class="nav-link active text-light link-warning" aria-current="page"
                                 href="quienessomos.html">¿Quienes somos?</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light link-warning" href="weedpedia.html">Weedpedia</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle text-light" href="#" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                Weedpedia
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="tutoriales.html">Tutoriales</a></li>
+                                <li><a class="dropdown-item" href="weedpedia.html">Tabla de especies</a></li>
+                            </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light link-warning" href="tutoriales.html">Tutoriales</a>
+                            <a class="nav-link text-light link-warning" href="media.html">Media</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-light link-warning" href="contacto.html">Contacto</a>
@@ -52,15 +59,8 @@
 
     <!-- Carrousel -->
 
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
-        <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-                aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                aria-label="Slide 3"></button>
-        </div>
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2000"
+        data-bs-pause="false">
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img src="assets/img/weed-1.jpg" class="d-block w-100" alt="...">
@@ -72,18 +72,7 @@
                 <img src="assets/img/weed-3.jpg" class="d-block w-100" alt="...">
             </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
     </div>
-
     <!-- /Carrousel -->
 
     <!-- Contenido -->
@@ -92,7 +81,7 @@
 
 
     <!-- Footer -->
-    <footer class="text-center text-white" style="background-color:#37AE88;">
+    <footer class=" text-center text-white" style="background-color:#37AE88;">
         <!-- Grid container -->
         <div class="container p-4">
             <!-- Section: Links  -->
@@ -103,10 +92,10 @@
                         <!-- Grid column -->
                         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
                             <!-- Content -->
-                            <h6 class="text-uppercase fw-bold mb-4">
+                            <h6 class="text-uppercase fw-bold mb-4 text-center">
                                 <i class="fas fa-gem me-3 text-secondary"></i>Weed Expertos
                             </h6>
-                            <p>
+                            <p class="text-center">
                                 Cannabicultores unidos al servicio de los nuevos.
                             </p>
                         </div>
@@ -115,13 +104,27 @@
                         <!-- Grid column -->
                         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
                             <!-- Links -->
-                            <h6 class="text-uppercase fw-bold mb-4">Contacto</h6>
+                            <h6 class="text-uppercase fw-bold mb-4 text-center">Contacto</h6>
                             <p><i class="fas fa-home me-3 text-secondary"></i> Mendoza, Argentina</p>
                             <p>
-                                <i class="fas fa-envelope me-3 text-secondary"></i>
+                                <i class="fas fa-envelope me-3 text-secondary text-center"></i>
                                 Leandro_godoy95@hotmail.com
                             </p>
-                            <p><i class="fas fa-phone me-3 text-secondary"></i> +542616816574
+                            <p><i class="fas fa-phone me-3 text-secondary text-center"></i> +542616816574
+                        </div>
+                        <!-- Grid column -->
+                        <!-- Grid column -->
+                        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                            <a href="https://en.wikipedia.org/wiki/Cat"><img src="assets/img/logo_whatsapp.png"
+                                    width="50px" height="50px"></a>
+                            <br>
+                            <br>
+                            <a href="https://en.wikipedia.org/wiki/Cat"><img src="assets/img/logo_instagram.png"
+                                    width="50px" height="50px"></a>
+                            <br>
+                            <br>
+                            <a href="https://en.wikipedia.org/wiki/Cat"><img src="assets/img/logo_twitter.png"
+                                    width="50px" height="50px"><a>
                         </div>
                         <!-- Grid column -->
                     </div>
