--- a/tutoriales.html
+++ b/tutoriales.html
@@ -39,9 +39,9 @@
                                 data-bs-toggle="dropdown" aria-expanded="false">
                                 Weedpedia
                             </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="tutoriales.html">Tutoriales</a></li>
-                                <li><a class="dropdown-item" href="weedpedia.html">Tabla de especies</a></li>
+                            <ul class="dropdown-menu navbarbg">
+                                <li><a class="dropdown-item text-light" href="tutoriales.html">Tutoriales</a></li>
+                                <li><a class="dropdown-item text-light" href="weedpedia.html">Tabla de especies</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
