--- a/tutoriales.html
+++ b/tutoriales.html
@@ -64,33 +64,33 @@
 
     <div class="contenido text-white text-center">
         <br>
-        <h1>Tutoriales</h1>
+        <h1 class="logotipo">Tutoriales</h1>
         <br>
         <br>
         <div class="container text-center">
             <div class="row align-items-center">
-                <div class="col">
+                <div class="col-sm">
                     <h2>"Cultivar canabis no es complicado"</h2>
                     <iframe width="360" height="240" src="https://www.youtube.com/embed/gdPvELTj5M8"
                         title="“Sembrar cannabis no es complicado”" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
-                <div class="col">
+                <div class="col-sm">
                     <h2>Cultivo outdoor</h2>
                     <iframe width="360" height="240" src="https://www.youtube.com/embed/bOJ-wXs8-5k"
                         title="Guía de Cultivo Marihuana en Exterior I Primeros pasos" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
-                <div class="col">
+                <div class="col-sm">
                     <h2>Canabis medicinal legal en Argentina</h2>
                     <iframe width="360" height="240" src="https://www.youtube.com/embed/xSH0nl8OkeM"
                         title="El cannabis medicinal es ley" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
-                <div class="col">
+                <div class="col-sm">
                     <h2>Fabrica canabis en Buenos Aires</h2>
                     <iframe width="360" height="240" src="https://www.youtube.com/embed/WAymbcNctUE"
                         title="CANNABIS industria ARGENTINA - Telefe Noticias" frameborder="0"
@@ -99,7 +99,7 @@
                 </div>
             </div>
             <div class="row align-items-start">
-                <div class="col">
+                <div class="col-sm">
                     <h2>Cosecha</h2>
                     <iframe width="360" height="240" src="https://www.youtube.com/embed/pxtVcYfkQ5g"
                         title="Cannabis Medicinal: La Cosecha y Extraccion de Cannabinoides- TvAgro por Juan Gonzalo Angel Restrepo"
@@ -107,21 +107,21 @@
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
-                <div class="col">
+                <div class="col-sm">
                     <h2>Cultivo indoor</h2>
                     <iframe width="360" height="240" src="https://www.youtube.com/embed/iSxwBdp96LA"
                         title="Cultivo Marihuana Interior I Seguimiento 3 meses" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
-                <div class="col">
+                <div class="col-sm">
                     <h2>Como producir aceite de canabis</h2>
                     <iframe width="360" height="240" src="https://www.youtube.com/embed/tdfqTMz9qYA"
                         title="Taller de preparación de Aceites de cannabis" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
-                <div class="col">
+                <div class="col-sm">
                     <h2>Manteca canabica para tus comidas</h2>
                     <iframe width="360" height="240" src="https://www.youtube.com/embed/K68qZuyYIbg"
                         title="Cómo hacer Mantequilla Cannábica" frameborder="0"
