--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbarbg">
             <div class="container-fluid">
-                <a class="navbar-brand text-light link-warning navbarbg logotipo" href="index.html">Weed Expertos</a>
+                <a class="navbar-brand text-light link-warning logotipo" href="index.html">Weed Expertos</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
