--- a/weedpedia.html
+++ b/weedpedia.html
@@ -59,10 +59,12 @@
     </header>
 
     <!-- /Header -->
-    <div class="contenido">
+    <div class="contenido text-white text-center">
         <br>
         <br>
-        <h2 class="text-center text-white bgcontent">Variedades</h2>
+        <h1 class="logotipo">Variedades</h1>
+        <br>
+        <br>
         <table class="table justify-content-center align-items-center text-white">
 
             <thead>
@@ -92,7 +94,7 @@
         </table>
         <div>
             <h2 class="text-center bgcontent text-white">Ejemplos</h2>
-            <img src="https://www.dinafem.org/uploads/indica_1.jpg" class="mx-auto d-block" width="450" height="450"
+            <img src="https://www.dinafem.org/uploads/indica_1.jpg" class="img-fluid" width="450" height="450"
                 border="3">
         </div>
 
