--- a/media.html
+++ b/media.html
@@ -62,7 +62,7 @@
 
     <!-- Contenido -->
     <div class="contenido text-white text-center">
-    <h2>Fotos de nuestros Weedcultores</h2>
+    <h1 class="logotipo">Fotos de nuestros Weedcultores</h1>
     <br>
     <br>
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
@@ -110,7 +110,7 @@
 
 
     <!-- Footer -->
-    <footer class=" text-center text-white" style="background-color:#37AE88;">
+    <footer class=" text-center text-white footer"> 
         <!-- Grid container -->
         <div class="container p-4">
             <!-- Section: Links  -->
