--- a/quienessomos.html
+++ b/quienessomos.html
@@ -62,7 +62,8 @@
 
     <div class="contenido text-white text-center">
         <br>
-        <h2>¿Quienes somos?</h2>
+        <h1 class="logotipo">¿Quienes somos?</h1>
+        <br>
         <br>
         <p>Somos una comunidad de cannabicultores con el objetivo de ayudar a todo aquel que quiera incursionar en el
             mundo del cannabis.</p>
@@ -77,7 +78,7 @@
         <br>
     </div>
     <!-- Footer -->
-    <footer class=" text-center text-white" style="background-color:#37AE88;">
+    <footer class=" text-center text-white footer"> 
         <!-- Grid container -->
         <div class="container p-4">
             <!-- Section: Links  -->
