--- a/weedpedia.html
+++ b/weedpedia.html
@@ -100,7 +100,7 @@
 
     </div>
     <!-- Footer -->
-    <footer class=" text-center text-white" style="background-color:#37AE88;">
+    <footer class=" text-center text-white footer"> 
         <!-- Grid container -->
         <div class="container p-4">
             <!-- Section: Links  -->
