--- a/contacto.html
+++ b/contacto.html
@@ -64,7 +64,8 @@
     <div class="contenido text-white text-center">
         <div class="mb-3">
             <br>
-            <h1>Contactanos</h1>
+            <br>
+            <h1 class="logotipo">Contactanos</h1>
             <label for="exampleFormControlInput1" class="form-label">Email:</label>
             <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nombre@ejemplo.com">
         </div>
@@ -72,8 +73,7 @@
             <label for="exampleFormControlTextarea1" class="form-label">Mensaje:</label>
             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
         </div>
-        <br>
-        <br>
+        <button type="button" class="btn btn-success">Enviar</button>
         <br>
         <br>
     </div>
@@ -81,7 +81,7 @@
     <!-- /Form -->
 
     <!-- Footer -->
-    <footer class=" text-center text-white" style="background-color:#37AE88;">
+    <footer class=" text-center text-white footer"> 
         <!-- Grid container -->
         <div class="container p-4">
             <!-- Section: Links  -->
