--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
 
     <!-- Footer -->
-    <footer class=" text-center text-white" style="background-color:#37AE88;">
+    <footer class="text-center text-white footer">
         <!-- Grid container -->
         <div class="container p-4">
             <!-- Section: Links  -->
@@ -139,7 +139,7 @@
 
         <!-- Copyright -->
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
-            © 2022 Copyright:
+            © 2023 Copyright:
             <a class="text-white" href="https://getbootstrap.com/">Hecho con bootstrap :3</a>
         </div>
         <!-- Copyright -->
