--- a/tutoriales.html
+++ b/tutoriales.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Pagina web dedicada a los amantes del weed">
-    <meta name="ketwords" content="weed tutoriales videos guias plantas marihuana cogollos flores geneticas autoflorecientes">
+    <meta name="ketwords"
+        content="weed tutoriales videos guias plantas marihuana cogollos flores geneticas autoflorecientes">
     <title>Tutoriales</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -67,32 +68,32 @@
         <h1 class="logotipo">Tutoriales</h1>
         <br>
         <br>
-        <div class="container text-center">
+        <div class="container text-center embed-responsive embed-responsive-1by1">
             <div class="row align-items-center">
                 <div class="col-sm">
                     <h2>"Cultivar canabis no es complicado"</h2>
-                    <iframe width="360" height="240" src="https://www.youtube.com/embed/gdPvELTj5M8"
+                    <iframe width="360" height="240" src="https://www.youtube.com/embed/gdPvELTj5M8" class="embed-responsive-item"
                         title="“Sembrar cannabis no es complicado”" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
                 <div class="col-sm">
                     <h2>Cultivo outdoor</h2>
-                    <iframe width="360" height="240" src="https://www.youtube.com/embed/bOJ-wXs8-5k"
+                    <iframe width="360" height="240" src="https://www.youtube.com/embed/bOJ-wXs8-5k" class="embed-responsive-item"
                         title="Guía de Cultivo Marihuana en Exterior I Primeros pasos" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
                 <div class="col-sm">
                     <h2>Canabis medicinal legal en Argentina</h2>
-                    <iframe width="360" height="240" src="https://www.youtube.com/embed/xSH0nl8OkeM"
+                    <iframe width="360" height="240" src="https://www.youtube.com/embed/xSH0nl8OkeM" class="embed-responsive-item"
                         title="El cannabis medicinal es ley" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
                 <div class="col-sm">
                     <h2>Fabrica canabis en Buenos Aires</h2>
-                    <iframe width="360" height="240" src="https://www.youtube.com/embed/WAymbcNctUE"
+                    <iframe width="360" height="240" src="https://www.youtube.com/embed/WAymbcNctUE" class="embed-responsive-item"
                         title="CANNABIS industria ARGENTINA - Telefe Noticias" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
@@ -101,7 +102,7 @@
             <div class="row align-items-start">
                 <div class="col-sm">
                     <h2>Cosecha</h2>
-                    <iframe width="360" height="240" src="https://www.youtube.com/embed/pxtVcYfkQ5g"
+                    <iframe width="360" height="240" src="https://www.youtube.com/embed/pxtVcYfkQ5g" class="embed-responsive-item"
                         title="Cannabis Medicinal: La Cosecha y Extraccion de Cannabinoides- TvAgro por Juan Gonzalo Angel Restrepo"
                         frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -109,21 +110,21 @@
                 </div>
                 <div class="col-sm">
                     <h2>Cultivo indoor</h2>
-                    <iframe width="360" height="240" src="https://www.youtube.com/embed/iSxwBdp96LA"
+                    <iframe width="360" height="240" src="https://www.youtube.com/embed/iSxwBdp96LA" class="embed-responsive-item"
                         title="Cultivo Marihuana Interior I Seguimiento 3 meses" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
                 <div class="col-sm">
                     <h2>Como producir aceite de canabis</h2>
-                    <iframe width="360" height="240" src="https://www.youtube.com/embed/tdfqTMz9qYA"
+                    <iframe width="360" height="240" src="https://www.youtube.com/embed/tdfqTMz9qYA" class="embed-responsive-item"
                         title="Taller de preparación de Aceites de cannabis" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
                 <div class="col-sm">
                     <h2>Manteca canabica para tus comidas</h2>
-                    <iframe width="360" height="240" src="https://www.youtube.com/embed/K68qZuyYIbg"
+                    <iframe width="360" height="240" src="https://www.youtube.com/embed/K68qZuyYIbg" class="embed-responsive-item"
                         title="Cómo hacer Mantequilla Cannábica" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
@@ -136,7 +137,7 @@
 
     <!-- Footer -->
 
-    <footer class=" text-center text-white" style="background-color:#37AE88;">
+    <footer class=" text-center text-white footer">
         <!-- Grid container -->
         <div class="container p-4">
             <!-- Section: Links  -->
