final changes i expect

--- a/tutoriales.html
+++ b/tutoriales.html
@@ -63,71 +63,82 @@
     <!-- Contenido -->
 
     <div class="contenido text-white text-center">
-        <br>
         <h1 class="logotipo">Tutoriales</h1>
         <br>
         <br>
-        <div class="container text-center embed-responsive embed-responsive-1by1">
-            <div class="row align-items-center">
-                <div class="col-sm">
+        <div class="container text-center embed-responsive embed-responsive-4by3">
+            <div class="row align-items-center text-center">
+                <div class="col">
                     <h2>"Cultivar canabis no es complicado"</h2>
-                    <iframe width="360" height="240" src="https://www.youtube.com/embed/gdPvELTj5M8" class="embed-responsive-item"
+                    <iframe width="240" height="180" src="https://www.youtube.com/embed/gdPvELTj5M8" class="embed-responsive-item"
                         title="“Sembrar cannabis no es complicado”" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
-                <div class="col-sm">
+                <br>           
+                <div class="col">
                     <h2>Cultivo outdoor</h2>
-                    <iframe width="360" height="240" src="https://www.youtube.com/embed/bOJ-wXs8-5k" class="embed-responsive-item"
+                    <br>
+                    <iframe width="240" height="180" src="https://www.youtube.com/embed/bOJ-wXs8-5k" class="embed-responsive-item"
                         title="Guía de Cultivo Marihuana en Exterior I Primeros pasos" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
-                <div class="col-sm">
+                <br>
+                <div class="col">
                     <h2>Canabis medicinal legal en Argentina</h2>
-                    <iframe width="360" height="240" src="https://www.youtube.com/embed/xSH0nl8OkeM" class="embed-responsive-item"
+                    <iframe width="240" height="180" src="https://www.youtube.com/embed/xSH0nl8OkeM" class="embed-responsive-item"
                         title="El cannabis medicinal es ley" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
-                <div class="col-sm">
+                <br>
+                <div class="col">
                     <h2>Fabrica canabis en Buenos Aires</h2>
-                    <iframe width="360" height="240" src="https://www.youtube.com/embed/WAymbcNctUE" class="embed-responsive-item"
+                    <br>
+                    <iframe width="240" height="180" src="https://www.youtube.com/embed/WAymbcNctUE" class="embed-responsive-item"
                         title="CANNABIS industria ARGENTINA - Telefe Noticias" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
+                <br>
             </div>
             <div class="row align-items-start">
-                <div class="col-sm">
+                <div class="col">
                     <h2>Cosecha</h2>
-                    <iframe width="360" height="240" src="https://www.youtube.com/embed/pxtVcYfkQ5g" class="embed-responsive-item"
+                    <br>
+                    <iframe width="240" height="180" src="https://www.youtube.com/embed/pxtVcYfkQ5g" class="embed-responsive-item"
                         title="Cannabis Medicinal: La Cosecha y Extraccion de Cannabinoides- TvAgro por Juan Gonzalo Angel Restrepo"
                         frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
-                <div class="col-sm">
+                <br>
+                <div class="col">
                     <h2>Cultivo indoor</h2>
-                    <iframe width="360" height="240" src="https://www.youtube.com/embed/iSxwBdp96LA" class="embed-responsive-item"
+                    <br>
+                    <iframe width="240" height="180" src="https://www.youtube.com/embed/iSxwBdp96LA" class="embed-responsive-item"
                         title="Cultivo Marihuana Interior I Seguimiento 3 meses" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
-                <div class="col-sm">
+                <br>
+                <div class="col">
                     <h2>Como producir aceite de canabis</h2>
-                    <iframe width="360" height="240" src="https://www.youtube.com/embed/tdfqTMz9qYA" class="embed-responsive-item"
+                    <iframe width="240" height="180" src="https://www.youtube.com/embed/tdfqTMz9qYA" class="embed-responsive-item"
                         title="Taller de preparación de Aceites de cannabis" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
-                <div class="col-sm">
+                <br>
+                <div class="col">
                     <h2>Manteca canabica para tus comidas</h2>
-                    <iframe width="360" height="240" src="https://www.youtube.com/embed/K68qZuyYIbg" class="embed-responsive-item"
+                    <iframe width="240" height="180" src="https://www.youtube.com/embed/K68qZuyYIbg" class="embed-responsive-item"
                         title="Cómo hacer Mantequilla Cannábica" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
+                <br>
             </div>
         </div>
     </div>
