--- a/weedpedia.html
+++ b/weedpedia.html
@@ -60,13 +60,10 @@
 
     <!-- /Header -->
     <div class="contenido text-white text-center">
-        <br>
-        <br>
         <h1 class="logotipo">Variedades</h1>
         <br>
         <br>
         <table class="table justify-content-center align-items-center text-white">
-
             <thead>
                 <tr>
                     <th scope="col">Nombre</th>
@@ -93,11 +90,12 @@
             </tbody>
         </table>
         <div>
-            <h2 class="text-center bgcontent text-white">Ejemplos</h2>
+            <br>
+            <h1 class="logotipo">Ejemplo</h1>
+            <br>
             <img src="https://www.dinafem.org/uploads/indica_1.jpg" class="img-fluid" width="450" height="450"
                 border="3">
         </div>
-
     </div>
     <!-- Footer -->
     <footer class=" text-center text-white footer"> 
