--- a/carrito.html
+++ b/carrito.html
@@ -7,16 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Pagina web dedicada a los amantes del weed">
     <meta name="keywords" content="weed tutoriales videos guias plantas marihuana cogollos flores geneticas autoflorecientes">
-    <title>Weedpedia</title>
+    <title>Weed Expertos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png">
 </head>
-
 
 <body>
 
@@ -25,7 +25,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbarbg">
             <div class="container-fluid">
-                <a class="navbar-brand text-light link-warning navbarbg logotipo" href="index.html">Weed Expertos</a>
+                <a class="navbar-brand text-light link-warning logotipo" href="index.html">Weed Expertos</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -65,46 +65,25 @@
     </header>
 
     <!-- /Header -->
-    <div class="contenido text-white text-center">
-        <h1 class="logotipo">Variedades</h1>
+
+    <!-- Contenido -->
+    <div class="contenido text-center">
+        <h1 class="logotipo text-white">Semas E-Shop</h1>
         <br>
-        <br>
-        <table class="table justify-content-center align-items-center text-white">
-            <thead>
-                <tr>
-                    <th scope="col">Nombre</th>
-                    <th scope="col">Descripcion</th>
-                    <th scope="col">THC/CBD</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Sativa</td>
-                    <td>Tendencia a ser una planta mas alta y con menos follage.</td>
-                    <td>Mayor cantidad de THC</td>
-                </tr>
-                <tr>
-                    <td>Indica</td>
-                    <td>Similar a un arbusto, con mucho follage.</td>
-                    <td>Mayor cantidad de CBD</td>
-                </tr>
-                <tr>
-                    <td>Hibrida</td>
-                    <td>El termino medio entre las dos, no es alta como la sativa ni un arbusto como la indica.</td>
-                    <td>Poseen cantidades variables de CBD y THC</td>
-                </tr>
-            </tbody>
-        </table>
-        <div>
-            <br>
-            <h1 class="logotipo">Ejemplo</h1>
-            <br>
-            <img src="https://www.dinafem.org/uploads/indica_1.jpg" class="img-fluid" width="450" height="450"
-                border="3">
-        </div>
+    <div id="contenidoCarrito" class="row justify-content-center row-cols-5 m-2 gap-1">
+      
     </div>
+    <div id="total" class="text-center text-light">
+
+    </div>
+    </div>
+    <script src="main.js"></script>
+    <script src="carrito.js"></script>
+    <!-- /Contenido -->
+
+
     <!-- Footer -->
-    <footer class=" text-center text-white footer"> 
+    <footer class="text-center text-white footer">
         <!-- Grid container -->
         <div class="container p-4">
             <!-- Section: Links  -->
@@ -160,7 +139,7 @@
 
         <!-- Copyright -->
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
-            © 2022 Copyright:
+            © 2023 Copyright:
             <a class="text-white" href="https://getbootstrap.com/">Hecho con bootstrap :3</a>
         </div>
         <!-- Copyright -->
