--- a/tutoriales.html
+++ b/tutoriales.html
@@ -36,6 +36,9 @@
                             <a class="nav-link active text-light link-warning" aria-current="page"
                                 href="quienessomos.html">¿Quienes somos?</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light link-warning" href="semascom.html">Venta de semillas</a>
+                        </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-light" href="#" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
@@ -51,6 +54,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-light link-warning" href="contacto.html">Contacto</a>
+                        </li>
+                        <li>
+                            <a class="nav-link text-light link-warning" href="carrito.html">Carrito</a>
                         </li>
                     </ul>
                 </div>
